--- a/LazySsh/bin/AndroidManifest.xml
+++ b/LazySsh/bin/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo" >
+        android:theme="@style/myTheme" >
         <activity
             android:name="com.figura4.lazyssh.view.MainActivity"
             android:label="@string/app_name" >
